--- a/Wave1.ipynb
+++ b/Wave1.ipynb
@@ -27,6 +27,19 @@
     },
     {
       "metadata": {
+        "id": "uZqagwct2bxM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "pip install swan"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "cbsj_JMUbHnD",
         "colab_type": "code",
         "colab": {}
@@ -37,6 +50,7 @@
         "import struct\n",
         "from scipy import fromstring, int16\n",
         "from scipy import signal\n",
+        "from swan import pycwt\n",
         "import numpy as np\n",
         "from pylab import *\n",
         "%matplotlib inline"
@@ -82,8 +96,8 @@
       "source": [
         "# 読み込みするWaveファイル指定\n",
         "\n",
-        "wavfile0 = 'Alarm01.wav'\n",
-        "wavfile1 = 'Alarm02.wav'"
+        "wavfile0 = '07_off.wav'\n",
+        "wavfile1 = '07_af.wav'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -229,7 +243,7 @@
         "plt.title('waveform of silent and AF')           # タイトル設定\n",
         "plt.xlabel('time[s]')                     # 横軸ラベル設定\n",
         "plt.ylabel('amplitude')                   # 縦軸ラベル設定\n",
-        "plt.ylim([-0.015, 0.015])                         # 縦軸表示範囲設定\n",
+        "#plt.ylim([-0.015, 0.015])                         # 縦軸表示範囲設定\n",
         "# plt.xlim([0, 0.01])                      # 横軸表示範囲設定\n",
         "\n",
         "\n",
@@ -303,6 +317,20 @@
         "#plt.show()\n",
         "# save as png\n",
         "plt.savefig('Envelope.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "E10F7EPxxGEu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('Envelope.png')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -513,6 +541,104 @@
       "source": [
         "from google.colab import files\n",
         "files.download('FFT.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "z22swN_lZatY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(16, 10))\n",
+        "\n",
+        "plt.subplot(3,1,1)\n",
+        "plt.plot(flist0[:int(N1/2)], G0_abs_amp_db[:int(N0/2)]-G1_abs_amp_db[:int(N1/2)], linestyle='-')\n",
+        "plt.title('FFT of AF-silent')           # タイトル設定\n",
+        "plt.xlim([1, fr0/2]) \n",
+        "plt.xlabel(\"Frequency [Hz]\")\n",
+        "plt.ylabel(\"Amplitude spectrum\")\n",
+        "ax = plt.gca()\n",
+        "ax.set_xscale('log')\n",
+        "plt.grid(which=\"minor\")\n",
+        "#plt.ylim([-180, -40]) \n",
+        "\n",
+        "#plt.show()\n",
+        "# save as png\n",
+        "plt.savefig('FFT_delta.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Nd9fmjo0byRm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('FFT_delta.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Xrfjw1jq1KvG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Fs1 = fr1\n",
+        "omega1 = 0.4\n",
+        "# (1)　Freqを指定してcwt\n",
+        "freqs1=np.arange(1,1000,1)\n",
+        "r=pycwt.cwt_f(left1,freqs1,Fs1,pycwt.Morlet(omega1))\n",
+        "rr=np.abs(r)\n",
+        "\n",
+        "plt.rcParams['figure.figsize'] = (20, 6)\n",
+        "fig = plt.figure()\n",
+        "ax1 = fig.add_axes([0.1, 0.75, 0.7, 0.2])\n",
+        "ax2 = fig.add_axes([0.1, 0.1, 0.7, 0.60], sharex=ax1)\n",
+        "ax3 = fig.add_axes([0.83, 0.1, 0.03, 0.6])\n",
+        "\n",
+        "ax1.plot(time1, left1, 'k')\n",
+        "\n",
+        "img = ax2.imshow(np.flipud(rr), extent=[0, time1[-1], freqs1[0], freqs1[-1]],\n",
+        "                 aspect='auto', interpolation='nearest')\n",
+        "\n",
+        "twin_ax = ax2\n",
+        "twin_ax.set_yscale('log')\n",
+        "twin_ax.set_xlim(0, time1[-1])\n",
+        "twin_ax.set_ylim(freqs1[0], freqs1[-1])\n",
+        "ax2.tick_params(which='both', labelleft=False, left=False)\n",
+        "twin_ax.tick_params(which='both', labelleft=True, left=True, labelright=False)\n",
+        "\n",
+        "fig.colorbar(img, cax=ax3)\n",
+        "\n",
+        "#plt.show()\n",
+        "# save as png\n",
+        "plt.savefig('Wavelet.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "4gnOhfmU83id",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('Wavelet.png')"
       ],
       "execution_count": 0,
       "outputs": []
