--- a/Wave1.ipynb
+++ b/Wave1.ipynb
@@ -596,7 +596,7 @@
       "cell_type": "code",
       "source": [
         "Fs1 = fr1\n",
-        "omega1 = 0.4\n",
+        "omega1 = 0.2\n",
         "# (1)　Freqを指定してcwt\n",
         "freqs1=np.arange(1,1000,1)\n",
         "r=pycwt.cwt_f(left1,freqs1,Fs1,pycwt.Morlet(omega1))\n",
@@ -611,7 +611,7 @@
         "ax1.plot(time1, left1, 'k')\n",
         "\n",
         "img = ax2.imshow(np.flipud(rr), extent=[0, time1[-1], freqs1[0], freqs1[-1]],\n",
-        "                 aspect='auto', interpolation='nearest')\n",
+        "                 aspect='auto', interpolation='nearest',cmap='magma')\n",
         "\n",
         "twin_ax = ax2\n",
         "twin_ax.set_yscale('log')\n",
@@ -639,6 +639,36 @@
       "source": [
         "from google.colab import files\n",
         "files.download('Wavelet.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "KbZt8DwaLbac",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# FFTのサンプル数\n",
+        "N = 2**9\n",
+        "\n",
+        "# FFTで用いるハミング窓\n",
+        "hammingWindow = np.hamming(N)\n",
+        "\n",
+        "length = fn1 / fr1\n",
+        "\n",
+        "# スペクトログラムを描画\n",
+        "pxx, freqs, bins, im = specgram(left1, NFFT = N, Fs = fr1, noverlap = N / 2, window=hammingWindow)\n",
+        "axis([0, length, 0, fr1 / 2])\n",
+        "\n",
+        "yscale('symlog', linthreshy=1)\n",
+        "\n",
+        "xlabel(\"time [second]\")\n",
+        "ylabel(\"frequency [Hz]\")\n",
+        "\n",
+        "show()"
       ],
       "execution_count": 0,
       "outputs": []
